# managed-mcp

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: run-tests.yml
.roo/: mcp.json
example/dummy_tool/: temp.py
src/managed_mcp/: __init__.py  cli.py  main.py  managed_tool_manager.py  tool_manager.py  util.py
tests/: test_cli.py  test_main.py  test_tool_manager.py  test_util.py
