[project]
name = "managed-mcp"
version = "0.1.0"
description = "Managed MCP provides a standardized approach for building and deploying MCP servers"
readme = "README.md"
authors = [
    { name = "Indivar Mishra", email = "indimishra@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
managed-mcp = "managed_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.coverage.run]
source = [
  "src"
]