[project]
name = "managed-mcp"
version = "0.1.0"
description = "Managed MCP provides a standardized approach for building and deploying MCP servers"
readme = "README.md"
authors = [
    { name = "Indivar Mishra", email = "indimishra@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.1",
    "typer>=0.16.0",
]

[project.scripts]
managed-mcp = "managed_mcp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "example",
    ".roo",
    ".vscode",
    "tests",
    "ruff.toml"
]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing"

[tool.coverage.run]
source = [
  "src"
]
